--- a/index.html
+++ b/index.html
@@ -53,18 +53,20 @@
                   <span class="descripcion_icon">PedidosYa</span>
                 </div>
   
-                <div class="icon mx-1">
-                    <img src="img/whatsapp.png" alt="" class="iconos">
-                    <span class="descripcion_icon">Whatsapp</span>
-                </div>
+                <a href="https://wa.me/message/PUG7NC4GPIDFB1" target="_blank">
+                  <div class="icon mx-1">
+                      <img src="img/whatsapp.png" alt="" class="iconos">
+                      <span class="descripcion_icon">Whatsapp</span>
+                  </div>
+                </a>
   
+                <a href="https://goo.gl/maps/rnqFzuxWZmkFsfUx5" target="_blank">
                 <div class="icon mx-1">
-                  <a href="https://goo.gl/maps/rnqFzuxWZmkFsfUx5">
                     <img src="img/ubicacion.png" alt="" class="iconos">
                     <span class="descripcion_icon">Ubicación</span>
 
-                  </a>
-                </div>
+                  </div>
+                </a>
               </div>
             </div>
           <!-- </div> -->
@@ -88,56 +90,56 @@
                             <div class="card_producto col col-6">
                                 <img src="img/Pollo.png" alt="" class="img-fluid img_producto">
                                 <h2 class="titulo_producto">Pollo</h2>
-                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                                <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                                 <img src="img/Pechuga.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Pechuga</h2>
-                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                                <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
 
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Pata Muslo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Pata Muslo</h2>
-                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                              <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Filet.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Filet</h2>
-                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/HamburguesaPollo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Hamburguesa de Pollo</h2>
-                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Alitas.png" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Alitas</h2>
-                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/supremas.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Supremas</h2>
-                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Trocitos.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Trocitos</h2>
-                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Menudos.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Menudos</h2>
-                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                             </div>
 
 
@@ -156,19 +158,19 @@
                           <div class="card_producto col col-6">
                             <img src="img/FiletMerluza.jpg" alt="" class="img-fluid img_producto">
                             <h2 class="titulo_producto">Filet de Merluza</h2>
-                            <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                         </div>
 
                         <div class="card_producto col col-6">
                           <img src="img/MedallonMerluza.png" alt="" class="img-fluid img_producto">
                           <h2 class="titulo_producto">Medallón de Merluza</h2>
-                          <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                          <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
                       </div>
 
                       <div class="card_producto col col-6">
                         <img src="img/MerluzaEspinacaQueso.jpg" alt="" class="img-fluid img_producto">
                         <h2 class="titulo_producto">Medallón de Merluza, Espinaca y Queso</h2>
-                        <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                        <h3 class="precio_producto"><strong>$1300 x kg</strong></h3>
                     </div>
 
 
@@ -188,44 +190,44 @@
                           <div class="card_producto">
                                 <img src="img/PatitasPollo.jpg" alt="" class="img-fluid img_producto">
                                 <h2 class="titulo_producto">Patitas de Pollo</h2>
-                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                                <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto">
                                 <img src="img/PatitasPolloJamonyQueso.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Patitas de Pollo c/ jamón y queso</h2>
-                                <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                                <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto">
                               <img src="img/Nugget.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Nuggets</h2>
-                              <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                              <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                           </div>
 
                           <div class="card_producto">
                             <img src="img/NuggetJamonyQueso.jpg" alt="" class="img-fluid">
                             <h2 class="titulo_producto">Nuggets Jamón y Queso</h2>
-                            <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                            <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                         </div>
 
                         <div class="card_producto">
                           <img src="img/MedallonJamonQueso.jpg" alt="" class="img-fluid">
                           <h2 class="titulo_producto">Medallón Jamón y Queso</h2>
-                          <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                          <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                       </div>
 
                       
                       <div class="card_producto">
                         <img src="img/Ricosaurios.jpg" alt="" class="img-fluid">
                         <h2 class="titulo_producto">Ricosaurios</h2>
-                        <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                        <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                     </div>
 
                     <div class="card_producto">
                       <img src="img/pochoclos.jpg" alt="" class="img-fluid">
                       <h2 class="titulo_producto">Pochoclos de Pollo</h2>
-                      <h3 class="precio_producto"><strong>$1300 </strong>  x kilo</h3>
+                      <h3 class="precio_producto"><strong>$1300 x kilo</strong></h3>
                   </div>
 
                   <div class="card_producto">
