--- a/index.html
+++ b/index.html
@@ -101,69 +101,69 @@
                             <div class="card_producto col col-6">
                                 <img src="img/Pollo.png" alt="" class="img-fluid img_producto">
                                 <h2 class="titulo_producto">Pollo entero</h2>
-                                <h3 class="precio_producto"><strong>$1100 x kg</strong></h3>
+                                <h3 class="precio_producto"><strong>$1200 x kg</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                                 <img src="img/Pechuga.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Pechuga</h2>
-                                <h3 class="precio_producto"><strong>$1800 x kg</strong></h3>
+                                <h3 class="precio_producto"><strong>$2000 x kg</strong></h3>
 
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Pata Muslo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Pata Muslo x 1 kg</h2>
-                              <h3 class="precio_producto"><strong>$1200</strong></h3>
+                              <h3 class="precio_producto"><strong>$1400</strong></h3>
                             </div>
 
-                            <div class="card_producto col col-6">
+                            <!-- <div class="card_producto col col-6">
                               <img src="img/Pata Muslo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Pata Muslo x 3 kg</h2>
                               <h3 class="precio_producto"><strong>$3100</strong></h3>
-                            </div>
+                            </div> -->
 
                             <div class="card_producto col col-6">
                               <img src="img/Filet.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Filet de Pollo</h2>
-                              <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$2500 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/HamburguesaPollo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Hamburguesa de Pollo</h2>
-                              <h3 class="precio_producto"><strong>$3200 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$4400 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Alitas.png" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Alitas</h2>
-                              <h3 class="precio_producto"><strong>$700 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$900 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/supremas.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Supremas</h2>
-                              <h3 class="precio_producto"><strong>$2200 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$2400 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Trocitos.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Trocitos (c/ pata muslo)</h2>
-                              <h3 class="precio_producto"><strong>$1000 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$1400 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Menudos.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Menudos x 1 kg</h2>
-                              <h3 class="precio_producto"><strong>$500 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$800 x kilo</strong></h3>
                             </div>
 
-                            <div class="card_producto col col-6">
+                            <!-- <div class="card_producto col col-6">
                               <img src="img/Menudos.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Menudos x 3 kg</h2>
                               <h3 class="precio_producto"><strong>$1200</strong></h3>
-                            </div>
+                            </div> -->
 
 
                         </div>
@@ -181,7 +181,7 @@
                           <div class="card_producto col col-6">
                             <img src="img/FiletMerluza.jpg" alt="" class="img-fluid img_producto">
                             <h2 class="titulo_producto">Filet de Merluza</h2>
-                            <h3 class="precio_producto"><strong>$2700 x kilo</strong></h3>
+                            <h3 class="precio_producto"><strong>$2800 x kilo</strong></h3>
                         </div>
                         
                         <div class="card_producto col col-6">
@@ -193,13 +193,13 @@
                         <div class="card_producto col col-6">
                           <img src="img/MedallonMerluza.png" alt="" class="img-fluid img_producto">
                           <h2 class="titulo_producto">Medallón de Merluza</h2>
-                          <h3 class="precio_producto"><strong>$1550 x kg</strong></h3>
+                          <h3 class="precio_producto"><strong>$1800 x kg</strong></h3>
                       </div>
 
                       <div class="card_producto col col-6">
                         <img src="img/MerluzaEspinacaQueso.jpg" alt="" class="img-fluid img_producto">
                         <h2 class="titulo_producto">Medallón de Merluza, Espinaca y Queso</h2>
-                        <h3 class="precio_producto"><strong>$1700 x kg</strong></h3>
+                        <h3 class="precio_producto"><strong>$2100 x kg</strong></h3>
                     </div>
 
 
@@ -217,59 +217,59 @@
                       <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body interna_categoria row">
 
-                          <div class="card_producto">
+                          <!-- <div class="card_producto">
                             <img src="img/MilanesasSoja.jpg" alt="" class="img-fluid img_producto">
                             <h2 class="titulo_producto">Milanesas de Soja</h2>
                             <h3 class="precio_producto"><strong>$2000 x kilo</strong></h3>
-                        </div>
+                        </div> -->
 
                           <div class="card_producto">
                                 <img src="img/PatitasPollo.jpg" alt="" class="img-fluid img_producto">
                                 <h2 class="titulo_producto">Patitas de Pollo clásicas</h2>
-                                <h3 class="precio_producto"><strong>$1900 x kilo</strong></h3>
+                                <h3 class="precio_producto"><strong>$2300 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto">
                                 <img src="img/PatitasPolloJamonyQueso.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Patitas de Pollo c/ jamón y queso</h2>
-                                <h3 class="precio_producto"><strong>$2400 x kilo</strong></h3>
+                                <h3 class="precio_producto"><strong>$2800 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto">
                               <img src="img/Nugget.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Nuggets</h2>
-                              <h3 class="precio_producto"><strong>$2350 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$3400 x kilo</strong></h3>
                           </div>
 
-                          <div class="card_producto">
+                          <!-- <div class="card_producto">
                             <img src="img/NuggetJamonyQueso.jpg" alt="" class="img-fluid">
                             <h2 class="titulo_producto">Nuggets Jamón y Queso</h2>
                             <h3 class="precio_producto"><strong>$2650 x kilo</strong></h3>
-                        </div>
+                        </div> -->
 
-                        <div class="card_producto">
+                        <!-- <div class="card_producto">
                           <img src="img/MedallonJamonQueso.jpg" alt="" class="img-fluid">
                           <h2 class="titulo_producto">Medallón Pollo, Jamón y Queso</h2>
                           <h3 class="precio_producto"><strong>$2450 x kilo</strong></h3>
-                      </div>
+                      </div> -->
 
                       
                       <div class="card_producto">
                         <img src="img/Ricosaurios.jpg" alt="" class="img-fluid">
                         <h2 class="titulo_producto">Ricosaurios</h2>
-                        <h3 class="precio_producto"><strong>$2600 x kilo</strong></h3>
+                        <h3 class="precio_producto"><strong>$3500 x kilo</strong></h3>
                     </div>
 
                     <div class="card_producto">
                       <img src="img/pochoclos.jpg" alt="" class="img-fluid">
                       <h2 class="titulo_producto">Pochoclos de Pollo</h2>
-                      <h3 class="precio_producto"><strong>$2450 x kilo</strong></h3>
+                      <h3 class="precio_producto"><strong>$3000 x kilo</strong></h3>
                   </div>
 
                   <div class="card_producto">
                     <img src="img/pechuguitaCrispy.png" alt="" class="img-fluid">
                     <h2 class="titulo_producto">Pechuguita Crispy</h2>
-                    <h3 class="precio_producto"><strong>$3200 x kilo</strong>  </h3>
+                    <h3 class="precio_producto"><strong>$3900 x kilo</strong>  </h3>
                 </div>
 
 
