--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <div class="card_producto col col-6">
                                 <img src="img/Pechuga.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Pechuga</h2>
-                                <h3 class="precio_producto"><strong>$2000 x kg</strong></h3>
+                                <h3 class="precio_producto"><strong>$2200 x kg</strong></h3>
 
                             </div>
 
@@ -117,16 +117,16 @@
                               <h3 class="precio_producto"><strong>$1400</strong></h3>
                             </div>
 
-                            <!-- <div class="card_producto col col-6">
+                            <div class="card_producto col col-6">
                               <img src="img/Pata Muslo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Pata Muslo x 3 kg</h2>
-                              <h3 class="precio_producto"><strong>$3100</strong></h3>
-                            </div> -->
+                              <h3 class="precio_producto"><strong>$3900</strong></h3>
+                            </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/Filet.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Filet de Pollo</h2>
-                              <h3 class="precio_producto"><strong>$2500 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$2800 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
@@ -144,7 +144,7 @@
                             <div class="card_producto col col-6">
                               <img src="img/supremas.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Supremas</h2>
-                              <h3 class="precio_producto"><strong>$2400 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$2500 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
