--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <div class="card_producto col col-6">
                                 <img src="img/Pechuga.jpg" alt="" class="img-fluid">
                                 <h2 class="titulo_producto">Pechuga</h2>
-                                <h3 class="precio_producto"><strong>$2200 x kg</strong></h3>
+                                <h3 class="precio_producto"><strong>$2500 x kg</strong></h3>
 
                             </div>
 
@@ -126,13 +126,13 @@
                             <div class="card_producto col col-6">
                               <img src="img/Filet.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Filet de Pollo</h2>
-                              <h3 class="precio_producto"><strong>$2800 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$3000 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
                               <img src="img/HamburguesaPollo.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Hamburguesa de Pollo</h2>
-                              <h3 class="precio_producto"><strong>$4400 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$250 x unidad</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
@@ -144,7 +144,7 @@
                             <div class="card_producto col col-6">
                               <img src="img/supremas.jpg" alt="" class="img-fluid">
                               <h2 class="titulo_producto">Supremas</h2>
-                              <h3 class="precio_producto"><strong>$2500 x kilo</strong></h3>
+                              <h3 class="precio_producto"><strong>$2800 x kilo</strong></h3>
                             </div>
 
                             <div class="card_producto col col-6">
