--- a/index.html
+++ b/index.html
@@ -52,37 +52,30 @@
 
 
     <div class="container">
-        <!-- <div class="titulos mt-4 container"> -->
-          <!-- <div> -->
+
             <div class="redes mt-4">
 
               <img src="img/Logo_LaPaulina.jpg" alt="" class="logo">
   
               <div class="iconos_redes">
-                <!-- <div class="icon mx-1">
-                  <img src="img/pedidosya.png" alt="" class="iconos">
-                  <span class="descripcion_icon">PedidosYa</span>
-                </div> -->
-  
-                <a href="https://wa.me/message/PUG7NC4GPIDFB1" target="_blank">
-                  <div class="icon mx-1">
-                      <img src="img/whatsapp.png" alt="" class="iconos">
-                      <span class="descripcion_icon">Whatsapp</span>
-                  </div>
-                </a>
-  
                 <a href="https://goo.gl/maps/rnqFzuxWZmkFsfUx5" target="_blank">
                 <div class="icon mx-1">
                     <img src="img/ubicacion.png" alt="" class="iconos">
                     <span class="descripcion_icon">Ubicación</span>
-
                   </div>
                 </a>
               </div>
             </div>
-          <!-- </div> -->
-        <!-- </div> -->
 
+      </div>
+      <div class="container-fluid card_whatsapp">
+        <a href="https://wa.me/message/PUG7NC4GPIDFB1" target="_blank"><div class="div_promo mt-4">
+          <img src="img/whatsapp.png" alt="" height="60">
+          <div>
+            Hacé tu pedido por whatsapp <br> ¡Presioná aquí!
+          </div>
+       </div>
+      </a>
       </div>
 
         <div class="contenido my-4 container">
@@ -158,12 +151,6 @@
                               <h2 class="titulo_producto">Menudos x 1 kg</h2>
                               <h3 class="precio_producto"><strong>$800 x kilo</strong></h3>
                             </div>
-
-                            <!-- <div class="card_producto col col-6">
-                              <img src="img/Menudos.jpg" alt="" class="img-fluid">
-                              <h2 class="titulo_producto">Menudos x 3 kg</h2>
-                              <h3 class="precio_producto"><strong>$1200</strong></h3>
-                            </div> -->
 
 
                         </div>
